<resources>
    <string name="app_name">Trip Track</string>
    <!--Mazen-->
    <string name="trip_name_test">My Alex Trip</string>
    <string name="start_point_test">Ismailia ITI</string>
    <string name="end_point_test">Smart village ITI</string>
    <string name="trip_name">Trip Name</string>
    <string name="select_start_point">Select start point"</string>
    <string name="select_end_point">Select end point</string>
    <string name="start">Start</string>
    <string name="trip_type">one way trip</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_trips_history">There are currently no trips in your history list. You didn\'t finish any trip yet!</string>
    <string name="no_nodes_history">You didn\'t add any notes to this trip!</string>
    <string name="name_of_trip">Enter name of trip!</string>
    <string name="start_ponit_empty">Start point can\'t be Empty!</string>
    <string name="end_ponit_empty">End point can\'t be Empty!</string>
    <string name="date_empty">Date can\'t be Empty!</string>
    <string name="time_empty">Time can\'t be Empty!</string>
    <string name="one_direction">One Direction</string>
    <string name="round_trip">Round Trip</string>
    <string name="type_of_trip">Type of trip</string>
    <string name="history">History</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancel">CANCEL</string>
    <string name="yes">YES</string>
    <string name="delete_warning">Delete Warning..! </string>
    <string name="delete_question">Are you want to delete this trip ?</string>
    <string name="other">Other</string>
    <!--end Mazen-->
    <!--Awatef-->
    <string name="login">login</string>
    <string name="SignUp">Sign Up</string>
    <string name="SignIn">SignIn</string>
    <string name="haveaccount">Already have an account! login</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="title">Navigationemail</string>
    <string name="nav_header_title">nav_header_title</string>
    <string name="nav_header_subtitle">nav_header_subtitle</string>
    <string name="nav_header_desc">nav_header_desc</string>
    <string name="menu_home">menu_home</string>
    <string name="menu_gallery">menu_gallery</string>
    <string name="menu_slideshow">menu_slideshow</string>
    <string name="menu_tools">menu_tools</string>
    <string name="menu_share">menu_share</string>
    <string name="menu_send">menu_send</string>
    <string name="logout">logout</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!--end Awatef-->
    <!--Zeyad-->
    <string name="facebook_app_id">191385532126234</string>
    <string name="fb_login_protocol_scheme">fb191385532126234</string>
    <string name="no_trips">There are currently no trips in your upcoming list. Tap the button below to add trip!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="add_notes">Add Notes</string>
    <string name="title_activity_history_map">Map</string>
    <string name="enter_your_email">enter your email</string>
    <string name="enter_your_password">enter your password</string>
    <string name="donot_have_account">if you don\'t have an account,sign up</string>
    <string name="enter_your_name">enter your name</string>
    <string name="confirm_password">confirm password</string>
    <string name="password_is_required">password is required</string>
    <string name="email_is_required">email is required</string>
    <string name="password_character"><![CDATA[password must be >= 6 characters]]></string>
    <string name="check_network_connection">check network connection</string>
    <string name="username_and_password_doesnot_matches">username and password doesn\'t matches</string>
    <string name="user_logined_successfully">user logined successfully</string>
    <string name="user_already_exist">user already exist</string>
    <string name="user_created_successfully">user created successfully</string>
    <string name="password_doesnot_match">password doesn\'t match</string>
    <string name="name_is_required">name is required</string>
    <string name="fill_empty_field">fill empty field</string>
    <string name="add_note">add note...</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="fb_reject_request">Your Request is rejected by facebook</string>
    <string name="enter_email_pass_to_login">Enter your email and password to login</string>
    <!--end Zeyad-->
</resources>
